fixed event card spacing

--- a/client/src/style/events.css
+++ b/client/src/style/events.css
@@ -30,7 +30,7 @@
 .event-title {
   grid-area: title;
   font-size: 2rem;
-  margin-top: -10px;
+  margin-top: -8px;
   line-height: 1;
   display: flex;
   text-align: left;
@@ -45,7 +45,7 @@
   min-width: 0;
   display: flex;
   flex-direction: column;
-  margin-top: -30px;
+  margin-top: -15px;
 }
 
 .event-image-container {
@@ -78,7 +78,7 @@
 .event-tags {
   display: flex;
   gap: 12px;
-  margin: 22px 0 30px;
+  margin: 8px 0 30px;
 }
 
 .event-tag {
@@ -88,6 +88,7 @@
   border-radius: 20px;
   font-size: 0.8rem;
   font-weight: 600;
+  margin-top: 10px;
   margin-bottom: 0px;
 }
 
@@ -95,7 +96,7 @@
   border: 0;
   border-top: 1px solid;
   margin-bottom: 10px;
-  margin-top: -20px;
+  margin-top: -16px;
 }
 
 .rsvp-button {
